--- a/smart-home-client/src/app/home/home.component.html
+++ b/smart-home-client/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 <section class="hero">
     <div class="hero-content">
-      <h1>Welcome to Mikopay</h1>
+      <h1>Welcome to your SmartHome</h1>
       <p>Manage your credit cards and transactions seamlessly.</p>
-    <div class="background-container" [ngClass]="currentImage"></div>
   </div>
 </section>
